Fix application role grant syntax error
🔧 Bug Fix:
- Correct APPLICATION ROLE grant syntax requires 'USER' keyword
- Fixed: GRANT APPLICATION ROLE ... TO USER demo_user (not just TO demo_user)
- Updated all documentation with correct syntax
- Added troubleshooting section in evaluation_setup.ipynb

✅ Fixes: SQL compilation error line 146 at position 67 unexpected 'demo_user'
📚 Updated: SETUP.md, EVALUATION_FRAMEWORK.md, evaluation_setup.ipynb
⚠️ Note: Database roles vs Application roles have different syntax requirements

--- a/evaluation_setup.ipynb
+++ b/evaluation_setup.ipynb
@@ -30,7 +30,23 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 🛠️ Step 1: Environment Setup\n"
+        "## 🛠️ Step 1: Environment Setup\n",
+        "\n",
+        "### ⚠️ **Important**: Permission Grant Syntax\n",
+        "\n",
+        "When running the optional permission grants, use the correct syntax:\n",
+        "\n",
+        "**✅ Correct:**\n",
+        "```sql\n",
+        "GRANT APPLICATION ROLE SNOWFLAKE.AI_OBSERVABILITY_EVENTS_LOOKUP TO USER demo_user;\n",
+        "```\n",
+        "\n",
+        "**❌ Incorrect (will cause syntax error):**\n",
+        "```sql\n",
+        "GRANT APPLICATION ROLE SNOWFLAKE.AI_OBSERVABILITY_EVENTS_LOOKUP TO demo_user;\n",
+        "```\n",
+        "\n",
+        "**Key difference**: Application roles require the `USER` keyword, unlike database roles.\n"
       ]
     },
     {
