Fix database context issue in batch evaluation notebook
- Separate evaluation storage (AI_OBSERVABILITY_DB) from Cortex Search Services location
- Add configurable RAG_DATABASE and RAG_SCHEMA parameters
- Update search service methods to use correct database context
- Add clear documentation about database configuration requirements

--- a/batch_evaluation.ipynb
+++ b/batch_evaluation.ipynb
@@ -14,6 +14,7 @@
         "- Install packages: `trulens-core==1.5.2`, `trulens-providers-cortex==1.5.2`, `trulens-connectors-snowflake==1.5.2`\n",
         "- Ensure RAG objects exist (CS_DOCUMENTS_METADATA, CS_DOCUMENTS_CHUNKS)\n",
         "- Required privileges: SNOWFLAKE.CORTEX_USER, AI_OBSERVABILITY_EVENTS_LOOKUP\n",
+        "- **Update database configuration**: Set RAG_DATABASE and RAG_SCHEMA variables to match where your Cortex Search Services are located\n",
         "\n",
         "**Why Notebook?**: TruLens batch evaluation works better in notebook environment due to execution context requirements.\n"
       ]
@@ -107,7 +108,7 @@
         "    Simplified RAG chatbot for notebook-based batch evaluation.\n",
         "    \"\"\"\n",
         "    \n",
-        "    def __init__(self, session):\n",
+        "    def __init__(self, session, rag_db=None, rag_schema=None):\n",
         "        self.session = session\n",
         "        self.root = Root(session)\n",
         "        \n",
@@ -115,7 +116,13 @@
         "        self.original_db = session.get_current_database()\n",
         "        self.original_schema = session.get_current_schema()\n",
         "        \n",
+        "        # RAG database/schema (where Cortex Search Services are located)\n",
+        "        # If not provided, assume they're in the original/current context\n",
+        "        self.rag_db = rag_db or self.original_db\n",
+        "        self.rag_schema = rag_schema or self.original_schema\n",
+        "        \n",
         "        print(f\"🔍 RAG will use context: {self.original_db}.{self.original_schema}\")\n",
+        "        print(f\"🔍 Cortex Search Services located in: {self.rag_db}.{self.rag_schema}\")\n",
         "    \n",
         "    @instrument(\n",
         "        span_type=SpanAttributes.SpanType.RETRIEVAL,\n",
@@ -127,12 +134,12 @@
         "    def query_metadata_search_service(self, query: str, limit: int = 10) -> List[Dict]:\n",
         "        \"\"\"Query metadata search service.\"\"\"\n",
         "        try:\n",
-        "            # Temporarily switch to RAG context\n",
-        "            self.session.sql(f\"USE SCHEMA {self.original_db}.{self.original_schema}\").collect()\n",
+        "            # Temporarily switch to RAG context where Cortex Search Services are located\n",
+        "            self.session.sql(f\"USE SCHEMA {self.rag_db}.{self.rag_schema}\").collect()\n",
         "            \n",
         "            search_service = (\n",
-        "                self.root.databases[self.original_db]\n",
-        "                .schemas[self.original_schema]\n",
+        "                self.root.databases[self.rag_db]\n",
+        "                .schemas[self.rag_schema]\n",
         "                .cortex_search_services[\"CS_DOCUMENTS_METADATA\"]\n",
         "            )\n",
         "            \n",
@@ -160,12 +167,12 @@
         "    def query_chunks_search_service(self, query: str, relevant_filenames: List[str], limit: int = 5) -> List[Dict]:\n",
         "        \"\"\"Query chunks search service with filtering.\"\"\"\n",
         "        try:\n",
-        "            # Temporarily switch to RAG context\n",
-        "            self.session.sql(f\"USE SCHEMA {self.original_db}.{self.original_schema}\").collect()\n",
+        "            # Temporarily switch to RAG context where Cortex Search Services are located\n",
+        "            self.session.sql(f\"USE SCHEMA {self.rag_db}.{self.rag_schema}\").collect()\n",
         "            \n",
         "            search_service = (\n",
-        "                self.root.databases[self.original_db]\n",
-        "                .schemas[self.original_schema]\n",
+        "                self.root.databases[self.rag_db]\n",
+        "                .schemas[self.rag_schema]\n",
         "                .cortex_search_services[\"CS_DOCUMENTS_CHUNKS\"]\n",
         "            )\n",
         "            \n",
@@ -237,8 +244,23 @@
         "        \n",
         "        return response\n",
         "\n",
-        "# Create RAG instance\n",
-        "rag_chatbot = NotebookRAGChatbot(session)\n",
+        "# ⚙️ Configure RAG Database/Schema Context\n",
+        "# Specify where your Cortex Search Services (CS_DOCUMENTS_METADATA, CS_DOCUMENTS_CHUNKS) are located\n",
+        "# Update these values to match your setup:\n",
+        "\n",
+        "RAG_DATABASE = \"CORTEX_AI\"        # Database where Cortex Search Services are located\n",
+        "RAG_SCHEMA = \"RAG_DEMO\"           # Schema where Cortex Search Services are located\n",
+        "\n",
+        "# Alternative: If search services are in the current session context, leave as None\n",
+        "# RAG_DATABASE = None\n",
+        "# RAG_SCHEMA = None\n",
+        "\n",
+        "print(f\"🔧 Configuration:\")\n",
+        "print(f\"   📊 Evaluation results will be stored in: AI_OBSERVABILITY_DB.EVALUATION_SCHEMA\")\n",
+        "print(f\"   🔍 Cortex Search Services will be accessed from: {RAG_DATABASE}.{RAG_SCHEMA}\")\n",
+        "\n",
+        "# Create RAG instance with proper database context\n",
+        "rag_chatbot = NotebookRAGChatbot(session, rag_db=RAG_DATABASE, rag_schema=RAG_SCHEMA)\n",
         "print(\"✅ RAG Chatbot created successfully\")\n"
       ]
     },
